# 4Semestr

./: README.md
Projekt1-Struktury/: README.md
Projekt1-Struktury/PAMSIProjekt1StrukturyDanych/: CMakeLists.txt
Projekt1-Struktury/PAMSIProjekt1StrukturyDanych/include/DT/: list.h  queue.h  stack.h
Projekt1-Struktury/PAMSIProjekt1StrukturyDanych/include/data_structures/: doubly_linked_list.hpp  heap.hpp  queue.hpp  singly_linked_list.hpp  stack.hpp
Projekt1-Struktury/PAMSIProjekt1StrukturyDanych/src/: example_test.cpp  main.cpp  test_data_structures.cpp
Projekt2-Sortowanie/: README.md
Projekt2-Sortowanie/PAMSISortowanie/: CMakeLists.txt
Projekt2-Sortowanie/PAMSISortowanie/include/algorithms/: heapsort.h  mergesort.h  quicksort.h
Projekt2-Sortowanie/PAMSISortowanie/src/: main.cpp  test_sorting_algorithms.cpp
Projekt3-Algorytmy/: README.md
Projekt3-Algorytmy/PAMSIGrafy/: .gitignore  CMakeLists.txt
Projekt3-Algorytmy/PAMSIGrafy/include/graphs/: adjacency_list_graph  adjacency_list_graph.hpp  adjacency_matrix_graph.hpp  graph.hpp  minimum_spanning_tree_algorithms.hpp  shortest_path_algorithms.hpp
Projekt3-Algorytmy/PAMSIGrafy/mst_data/graph/: graphV10AsDirected.txt
Projekt3-Algorytmy/PAMSIGrafy/src/: adjacency_list_graph  adjacency_list_graph.cpp  adjacency_matrix_graph  adjacency_matrix_graph.cpp  main  main.cpp  minimum_spanning_tree_algorithms  minimum_spanning_tree_algorithms.cpp  mst_test_graphs.cpp  shortest_path_algorithms  shortest_path_algorithms.cpp  test_graphs.cpp
